updated notebooks and added scarches mapping

--- a/notebooks/1_building_and_annotating_the_atlas_core/06_nested_clustering_and_cluster_DEA.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/06_nested_clustering_and_cluster_DEA.ipynb
@@ -239,13 +239,13 @@
     "    # write to csv for benchmarking data:\n",
     "    if dataset_name in [\"harmony\",\"scanvi\",\"seuratrpca\"]:\n",
     "        cluster_df.to_csv(\n",
-    "            os.paht.join(dir_benchmarking_cluster_output, f\"{dataset_name}/{dataset_name}_{cluster_name}_cluster_assignment.csv\")\n",
+    "            os.path.join(dir_benchmarking_cluster_output, f\"{dataset_name}/{dataset_name}_{cluster_name}_cluster_assignment.csv\")\n",
     "        )\n",
     "    # If wanted/needed, for final HLCA:\n",
     "    if dataset_name == \"HLCA\":\n",
     "        # store cluster assignments:\n",
     "        cluster_df.to_csv(\n",
-    "            os.paht.join(dir_HLCA_cluster_output, f\"LCA_{cluster_name}_cluster_assignment.csv\")\n",
+    "            os.path.join(dir_HLCA_cluster_output, f\"LCA_{cluster_name}_cluster_assignment.csv\")\n",
     "        )\n",
     "        # calculate marker genes with respect to all other clusters, and with respect to sister clusters (i.e. other cluster from the same parent cluster):\n",
     "        for marker_ref in [\"sisters\", \"all\"]:\n",
