Added note on bug in scarches notebook

--- a/notebooks/3_atlas_extension/2_scArches_mapping.ipynb
+++ b/notebooks/3_atlas_extension/2_scArches_mapping.ipynb
@@ -118,7 +118,8 @@
     "path_input_core_data = \"../../data/HLCA_core_h5ads/HLCA_v1_integration/HLCA_v1_scANVI_input.h5ad\"\n",
     "path_input_extension_data = \"../../data/HLCA_extended/HLCA_extended/extension_data_pooled_raw_2000genes.h5ad\"\n",
     "dir_reference_model = '../../results/scANVI_integration/scanvi_model' # directory where the reference model is stored\n",
-    "dir_surgery_models = '../scArches_models/surgery_models' # directory where surgery model(s) will be stored\n"
+    "dir_surgery_models = '../../data/HLCA_extended/HLCA_extended_models_and_embs/surgery_models' # directory where surgery model(s) will be stored\n",
+    "dir_surgery_embs = \"../../data/HLCA_extended/HLCA_extended_models_and_embs/surgery_output_embeddings\""
    ]
   },
   {
@@ -1427,11 +1428,11 @@
     "for dataset in query_conditions[::-1]: # from small to large datasets\n",
     "    print(f\"Working on {dataset}...\")\n",
     "    query_subadata = query_adata[query_adata.obs.dataset == dataset,:].copy()\n",
-    "    surgery_path = f'../scArches_models/surgery_models/{dataset}'\n",
+    "    surgery_path = os.path.join(dir_surgery_models, dataset)\n",
     "    model = sca.models.SCANVI.load(surgery_path,query_subadata)\n",
     "    query_subadata_latent = sc.AnnData(model.get_latent_representation(adata=query_subadata))\n",
     "    query_subadata_latent.obs.index = query_subadata.obs.index\n",
-    "    query_subadata_latent.write(f\"../scArches_models/surgery_output_embeddings/{dataset}_emb_LCAv2.h5ad\")"
+    "    query_subadata_latent.write(os.path.join(dir_surgery_embs, f\"{dataset}_emb.h5ad\"))"
    ]
   },
   {
@@ -1439,6 +1440,13 @@
    "metadata": {},
    "source": [
     "get embeddings for newly added cells from datasets already present in the LCA (i.e. reference); for these \"extensions\" of datasets in the core we did not learn any adapters/do any surgery."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LISA CHECK IF IT USES THE CORRECT BATCH ONE-HOT ENCODING HERE..."
    ]
   },
   {
@@ -1499,33 +1507,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### THIS CODE IS WRONG, USING THE REFERENCE MODEL HERE TO GET THE LATENT REPRESENTATION OF QUERY DATASETS!!!! NEED TO CORRECT FOR REVISIONS!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "commented out all faulty code now"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# concatenate reference and query data\n",
-    "adata_full = reference_adata.concatenate(query_adata, index_unique=None) #, batch_key=None, batch_categories=None)\n",
-    "# run through model\n",
-    "full_latent = sc.AnnData(model.get_latent_representation(adata=adata_full))\n",
-    "# copy indices (order is retained)\n",
-    "full_latent.obs.index = adata_full.obs.index\n",
-    "# copy cell type labels\n",
-    "full_latent.obs['cell_type'] = adata_full.obs[cell_type_key].tolist()\n",
-    "# copy batch labels\n",
-    "full_latent.obs['batch'] = adata_full.obs[condition_key].tolist()\n",
-    "# # if wanted, copy reference annotation labels, level 1 - 5:\n",
-    "# for lvl in range(1,6):\n",
-    "#     lvl_name = \"ann_level_\" + str(lvl)\n",
-    "#     # initiate empty columns\n",
-    "#     full_latent.obs[lvl_name] = None\n",
-    "#     # fill in \n",
-    "#     full_latent.obs.loc[reference_adata.obs.index, lvl_name]= reference_adata.obs[lvl_name]\n",
-    "#     if lvl_name in query_adata.obs.columns:\n",
-    "#         full_latent.obs.loc[query_adata.obs.index, lvl_name] = query_adata.obs[lvl_name]\n",
-    "#     else:\n",
-    "#         print(\"filling out 'None' for {} in query_adata\".format(lvl_name))\n",
-    "#         full_latent.obs.loc[query_adata.obs.index, lvl_name] = None"
+    "# # concatenate reference and query data\n",
+    "# adata_full = reference_adata.concatenate(query_adata, index_unique=None) #, batch_key=None, batch_categories=None)\n",
+    "# # run through model\n",
+    "# full_latent = sc.AnnData(model.get_latent_representation(adata=adata_full))\n",
+    "# # copy indices (order is retained)\n",
+    "# full_latent.obs.index = adata_full.obs.index\n",
+    "# # copy cell type labels\n",
+    "# full_latent.obs['cell_type'] = adata_full.obs[cell_type_key].tolist()\n",
+    "# # copy batch labels\n",
+    "# full_latent.obs['batch'] = adata_full.obs[condition_key].tolist()\n",
+    "# # # if wanted, copy reference annotation labels, level 1 - 5:\n",
+    "# # for lvl in range(1,6):\n",
+    "# #     lvl_name = \"ann_level_\" + str(lvl)\n",
+    "# #     # initiate empty columns\n",
+    "# #     full_latent.obs[lvl_name] = None\n",
+    "# #     # fill in \n",
+    "# #     full_latent.obs.loc[reference_adata.obs.index, lvl_name]= reference_adata.obs[lvl_name]\n",
+    "# #     if lvl_name in query_adata.obs.columns:\n",
+    "# #         full_latent.obs.loc[query_adata.obs.index, lvl_name] = query_adata.obs[lvl_name]\n",
+    "# #     else:\n",
+    "# #         print(\"filling out 'None' for {} in query_adata\".format(lvl_name))\n",
+    "# #         full_latent.obs.loc[query_adata.obs.index, lvl_name] = None"
    ]
   },
   {
@@ -1558,7 +1580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_latent.write(f\"{data_dir}query_datasets/out/{query_adata_name}/HLCA_{query_adata_name}_emb.h5ad\")"
+    "# full_latent.write(f\"{data_dir}query_datasets/out/{query_adata_name}/HLCA_{query_adata_name}_emb.h5ad\")"
    ]
   },
   {
@@ -1574,7 +1596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_full.obsm['X_scarches_emb'] = full_latent.X"
+    "# adata_full.obsm['X_scarches_emb'] = full_latent.X"
    ]
   },
   {
@@ -1583,7 +1605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_full.write(f\"{data_dir}query_datasets/out/{query_adata_name}/HLCA_{query_adata_name}_adata.h5ad\")"
+    "# adata_full.write(f\"{data_dir}query_datasets/out/{query_adata_name}/HLCA_{query_adata_name}_adata.h5ad\")"
    ]
   },
   {
