majority of changes for revisions

--- a/notebooks/1_building_and_annotating_the_atlas_core/05_scANVI_integration.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/05_scANVI_integration.ipynb
@@ -612,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = os.path.join(dir_output_model, \"scanvi_model\") # this is the directory name/path of the directory *to be created*"
+    "model_dir = os.path.join(dir_out, \"scanvi_model\") # this is the directory name/path of the directory *to be created*"
    ]
   },
   {
