--- a/notebooks/1_building_and_annotating_the_atlas_core/10_atlas_splitting_by_compartment.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/10_atlas_splitting_by_compartment.ipynb
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_HLCA = \"../../data/HLCA_core_h5ads/HLCA_v1.h5ad\"\n",
-    "dir_HLCA_subsets = \"../../data/HLCA_core_h5ads/HLCA_v1_subsets/\""
+    "path_HLCA = \"../../data/HLCA_core_h5ads/HLCA_v2.h5ad\"\n",
+    "dir_HLCA_subsets = \"../../data/HLCA_core_h5ads/HLCA_subsets/\""
    ]
   },
   {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +123,18 @@
     "    subadata = adata[adata.obs.leiden_1 == cl_number, :].copy()\n",
     "    sc.pp.neighbors(subadata, n_neighbors=15, use_rep=\"X_scanvi_emb\")\n",
     "    sc.tl.umap(subadata)\n",
-    "    subadata.obsm['X_umap_scanvi'] = subadata.obsm['X_umap']\n",
+    "    subadata.obsm[\"X_umap_scanvi\"] = subadata.obsm[\"X_umap\"]\n",
     "    subadatas[comp_name] = subadata\n",
     "    subadata.write(os.path.join(dir_HLCA_subsets, f\"HLCA_{comp_name}.h5ad\"))\n",
     "    del subadata"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
