cleaning and updating

--- a/notebooks/1_building_and_annotating_the_atlas_core/01a_data_import_and_preprocessing.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/01a_data_import_and_preprocessing.ipynb
@@ -782,6 +782,7 @@
     "    \"relative_sample_collection_timepoint\",\n",
     "    \"treatment_status\",\n",
     "    \"number_of_cells_loaded\",\n",
+    "    \"tissue_dissociation_protocol\"\n",
     "]"
    ]
   },
@@ -855,7 +856,6 @@
     "        \"sequencing_platform\": \"nunique\",\n",
     "        \"single_cell_platform\": \"nunique\",\n",
     "        \"subject_type\": \"nunique\",\n",
-    "        \"tissue_dissociation_protocol\": \"nunique\",\n",
     "    }\n",
     ")"
    ]
@@ -1219,6 +1219,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Change ethnicity to ancestry and map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is very imperfect mapping but the best we could do for now. SNP-based ancestry calling (using RNA-seq reads) is in the making..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ethnicity_remapper = {\n",
+    "    \"asian\": \"asian\",\n",
+    "    \"black\": \"african\",\n",
+    "    \"latino\": \"american\",\n",
+    "    \"mixed\": \"mixed\",\n",
+    "    \"nan\": \"nan\",\n",
+    "    \"pacific islander\": \"pacific islander\",\n",
+    "    \"white\": \"european\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs['ancestry'] = adata.obs.ethnicity.map(ethnicity_remapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del adata.obs['ethnicity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixed_ethnicity_remapper = {\n",
+    "    \"nan\": np.nan,\n",
+    "    \"white/asian\": \"european/asian\",\n",
+    "    \"Mixed race; South american\": \"american\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs[\"mixed_ancestry\"] = adata.obs.mixed_ethnicity.map(mixed_ethnicity_remapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del adata.obs['mixed_ethnicity']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Add digestion protocol information:"
    ]
   },
@@ -1249,7 +1329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs[\"digestion\"] = adata.obs.study.map(study_to_digest_prot)"
+    "adata.obs[\"tissue_dissociation_protocol\"] = adata.obs.study.map(study_to_digest_prot)"
    ]
   },
   {
