--- a/notebooks/2_downstream_analysis_of_HLCA_core/3_import_and_padjust_modeling_results.ipynb
+++ b/notebooks/2_downstream_analysis_of_HLCA_core/3_import_and_padjust_modeling_results.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we import the output from the R script performing covariate (age, sex, BMI etc.) modeling of gene expression. p-values are corrected for multiple testing, and some additional statistics used in the paper are calculated. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Load modules, set paths, load files:"
    ]
   },
