--- a/notebooks/3_atlas_extension/01_final_data_cleaning_and_prep_for_scArches.ipynb
+++ b/notebooks/3_atlas_extension/01_final_data_cleaning_and_prep_for_scArches.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll use files as have been prepared in the notebooks in the HLA_extension_data_preprocessing folder as a basis for the HLCA extension. Here we perform final checks, as well as further cleaning and harmonization of metadata."
+    "We'll use the data files that have been prepared in the notebooks from the HLA_extension_data_preprocessing folder as a basis for the HLCA extension. Here we perform final checks, as well as further cleaning and harmonization of metadata."
    ]
   },
   {
@@ -21,8 +21,7 @@
     "tags": []
    },
    "source": [
-    "### TO DO: ADAPT NOTEBOOK SO THAT IT INCLUDES THE HLCA CORE (FOR BOTTOM PART)<br>\n",
-    "To do 2: set Sun_2020 to donor_lung instead of biopsy"
+    "### TO DO: ADAPT NOTEBOOK SO THAT IT INCLUDES THE HLCA CORE (FOR BOTTOM PART)<br>"
    ]
   },
   {
@@ -646,10 +645,10 @@
     "    \"szabo\": \"donor_lung\",\n",
     "    \"tsukui\": \"donor_lung\",  # rejected donors\n",
     "    \"valenzi\": \"lung_explant\",  # explant\n",
-    "    \"wang_sub_batch1\": \"biopsy\",\n",
-    "    \"wang_sub_batch2\": \"biopsy\",\n",
-    "    \"wang_sub_batch3\": \"biopsy\",\n",
-    "    \"wang_sub_batch4\": \"biopsy\",\n",
+    "    \"wang_sub_batch1\": \"donor_lung_cryopreserved\",\n",
+    "    \"wang_sub_batch2\": \"donor_lung_cryopreserved\",\n",
+    "    \"wang_sub_batch3\": \"donor_lung_cryopreserved\",\n",
+    "    \"wang_sub_batch4\": \"donor_lung_cryopreserved\",\n",
     "    \"wouters\": \"balf\",\n",
     "}"
    ]
