--- a/notebooks/3_atlas_extension/05_Meyer_2021_general_analysis.ipynb
+++ b/notebooks/3_atlas_extension/05_Meyer_2021_general_analysis.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we do downstream analysis of the joint HLCA core + Meyer_2021 data, focusing on the detection of new cell types in the core using the annotations from the Meyer_2021 dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1484,7 +1491,7 @@
     }
    ],
    "source": [
-    "FIGURES[\"5e_meyer_spatial_clusters\"] = sc.pl.umap(\n",
+    "FIGURES[\"5f_meyer_spatial_clusters\"] = sc.pl.umap(\n",
     "    cl_fibs_sm,\n",
     "    color=\"Spatial clusters\",\n",
     "    s=25,\n",
@@ -1759,7 +1766,7 @@
     }
    ],
    "source": [
-    "FIGURES[\"ED_meyer_spatial_cluster_marker_expression_refvsq\"].show()"
+    "FIGURES[\"ED18c_meyer_spatial_cluster_marker_expression_refvsq\"].show()"
    ]
   },
   {
@@ -2026,7 +2033,7 @@
     "    plt.ylabel(\"% of cells\")\n",
     "    plt.grid(False)\n",
     "    plt.show()\n",
-    "    FIGURES[\"ED_meyer_spatial_cluster_study_composition\"] = fig"
+    "    FIGURES[\"ED18b_meyer_spatial_cluster_study_composition\"] = fig"
    ]
   },
   {
@@ -2692,7 +2699,7 @@
    "outputs": [],
    "source": [
     "spatial_cluster_cell_counts_ref_vs_q.to_csv(\n",
-    "    os.path.join(dir_figures, \"ED_meyer_cell_counts_per_spatial_clusters.csv\")\n",
+    "    os.path.join(dir_figures, \"ED18a_meyer_cell_counts_per_spatial_clusters.csv\")\n",
     ")"
    ]
   },
@@ -2703,7 +2710,7 @@
    "outputs": [],
    "source": [
     "spatial_ct_prec_rec.to_csv(\n",
-    "    os.path.join(dir_figures, \"ED_meyer_prec_recall_spatial_clusters.csv\")\n",
+    "    os.path.join(dir_figures, \"ED18a_meyer_prec_recall_spatial_clusters.csv\")\n",
     ")"
    ]
   },
