--- a/notebooks/3_atlas_extension/07_combine_HLCA_core_with_Thienpont_2018_cancer_data_and_cluster.ipynb
+++ b/notebooks/3_atlas_extension/07_combine_HLCA_core_with_Thienpont_2018_cancer_data_and_cluster.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we combine the HLCA core with the Thienpont_2018 lung cancer dataset, and generate a umap (based on the integrated embedding from scArches), clustering, and normalized counts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import modules, set paths:"
    ]
   },
