--- a/notebooks/1_building_and_annotating_the_atlas_core/07_manual_ann_ingestion_and_removal_of_doublets_etc.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/07_manual_ann_ingestion_and_removal_of_doublets_etc.ipynb
@@ -94,7 +94,7 @@
     "path_input_HLCA = \"../../data/HLCA_core_h5ads/HLCA_v2_intermediates/LCA_Bano_Barb_Jain_Kras_Lafy_Meye_Mish_MishBud_Nawi_Seib_Teic_log1p.h5ad\"  # First v2 file! slightly updated sample metadata and level 5 clustering added\n",
     "path_input_HLCA = \"../../data/HLCA_core_h5ads/HLCA_v1_intermediates/LCA_Bano_Barb_Jain_Kras_Lafy_Meye_Mish_MishBud_Nawi_Seib_Teic_log1p.h5ad\"\n",
     "path_output_HLCA = \"../../data/HLCA_core_h5ads/HLCA_v2.h5ad\"\n",
-    "path_manual_anns = \"../../supporting_files/celltype_reannotation/manual_cluster_annotation_20220712.csv\"  # for HLCA_v1 this was: 20210820.csv\"\n",
+    "path_manual_anns = \"../../supporting_files/celltype_reannotation/HLCA_manual_cluster_annotation_20221007.csv\"  # for HLCA_v1 this was: 20210820.csv\"\n",
     "path_celltype_ref_mapping = \"../../supporting_files/metadata_harmonization/HLCA_cell_type_reference_mapping_20220712.csv\"  # for HLCA_v1 this was 20211103.csv\n",
     "path_man_anns_levd_and_colors = \"../../supporting_files/celltype_structure_and_colors/manual_anns_and_leveled_anns_ordered.csv\"\n",
     "path_grouped_man_anns_levd_and_colors = \"../../supporting_files/celltype_structure_and_colors/manual_anns_grouped_order_and_colors.csv\""
@@ -1491,7 +1491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1505,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
