--- a/notebooks/1_building_and_annotating_the_atlas_core/10_atlas_splitting_by_compartment.ipynb
+++ b/notebooks/1_building_and_annotating_the_atlas_core/10_atlas_splitting_by_compartment.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we'll split the HLCA into three subsets for figure generation, i.e. into epithelial, immune, and endothelial-stromal sub-HLCAs:"
+    "Here we'll split the HLCA into three subsets for figure generation, i.e. into epithelial, immune, and endothelial-stromal sub-HLCAs, and pre-calculate the umaps, so that this does not have to be done in the figure generating scripts."
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
